# symmetrical-couscous

./: .gitignore  pyproject.toml
data_manager_assignment/: analysis.py  clean.py  derive_variables.py  filter.py  main.py
data_manager_assignment/data/: mch_dataset.csv  race_ethnicity_vs_preterm_births_frequency_table.csv  subset_data.csv
